<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_list"
        style="@style/ToolbarStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        android:orientation="vertical"
        android:padding="@dimen/padding_default"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding_small">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/EditTextStyle.Base"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_new_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_new_item" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add"
                style="@style/ButtonStyle.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_items"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_small" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>