<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle.Base"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/padding_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_latitude"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/EditTextStyle.Base"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/padding_small">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_longitude"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_update"
            style="@style/ButtonStyle.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_update" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_weather"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>